#171 fix z-index

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,7 +1,7 @@
 @import 'theme.less';
 @import 'breakpoints.less';
 @import 'colors.less';
-@import "../node_modules/quill/dist/quill.snow.css";
+@import '../node_modules/quill/dist/quill.snow.css';
 
 /* You can add global styles to this file, and also import other style files */
 
@@ -55,4 +55,8 @@ h4 {
   @h4-size: 18px;
   @body-size: 14px;
   @small-size: 12px;
+}
+
+.ql-snow .ql-tooltip {
+  z-index: 99999;
 }
